# temporal-ml-demo

./: DockerfileWorker  DockerfileWorkflow  README.md  activities.py  app.py  client.py  how-to-run.md  pyproject.toml  starter.py  worker.py  workflow.py
dataset/: AmazonReviews.csv  DisneylandReviews.csv  reviews.csv
templates/: base.html  index.html  locations.html  table.html
yaml/certificates/: certificate.yaml
yaml/deployment/: deployment.yaml
yaml/ingress/: ingressroute.yaml
yaml/secrets/: tls-secret.yaml
yaml/services/: metrics-monitor.yaml  metrics-service.yaml  ui-service.yaml
