[tool.poetry]
name = "temporal-ml-demo"
version = "0.1.0"
description = "Machine Learning Demo"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = {extras = ["async"], version = "^2.2.3"}
openai = "^0.27.8"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
scipy = "1.11.1"
sklearn-cv-pandas = "0.0.12"
transformers = "^4.30.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
temporalio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
